@startuml corrected_erd
title E-Learning System - Complete ERD (Corrected)

entity "User" as user {
  *id: INT PK
  --
  name: VARCHAR(255)
  email: VARCHAR(255) UNIQUE
  password: VARCHAR(255)
  phone: VARCHAR(20)
  role: ENUM {admin|teacher|student}
  school: VARCHAR(255)
  avatar: VARCHAR(255)
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "Subject" as subject {
  *id: INT PK
  --
  name: VARCHAR(255)
  class_level: INT
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "Question" as question {
  *id: INT PK
  --
  subject_id: INT FK
  type: ENUM {mcq|fill_blank|matching|table_fill}
  content: TEXT
  media_image: VARCHAR(255)
  media_audio: VARCHAR(255)
  data: JSON
  explanation: TEXT
  created_by: INT FK
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "Test" as test {
  *id: INT PK
  --
  title: VARCHAR(255)
  subject_id: INT FK
  created_by: INT FK
  test_code: VARCHAR(50) UNIQUE
  access_type: ENUM {public|private|class}
  is_active: BOOLEAN
  expires_at: DATETIME
  max_attempts: INT
  duration: INT
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "TestQuestion" as test_question {
  *id: INT PK
  --
  test_id: INT FK
  question_id: INT FK
  order_index: INT
  score: DECIMAL
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "TestAttempt" as test_attempt {
  *id: INT PK
  --
  test_id: INT FK
  user_id: INT FK
  attempt_no: INT
  started_at: DATETIME
  submitted_at: DATETIME
  expired_at: DATETIME
  score: FLOAT
  status: ENUM {in_progress|submitted|expired}
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "TestAnswer" as test_answer {
  *id: INT PK
  --
  attempt_id: INT FK
  question_id: INT FK
  answer: JSON
  is_correct: BOOLEAN
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "QuestionProgress" as question_progress {
  *id: INT PK
  --
  user_id: INT FK
  question_id: INT FK
  is_correct: BOOLEAN
  last_answer: JSON
  attempt_count: INT
  last_attempt_at: DATETIME
}

entity "ClassModel" as class_model {
  *id: INT PK
  --
  name: VARCHAR(255)
  class_code: VARCHAR(50) UNIQUE
  description: TEXT
  created_by: INT FK
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "ClassUser" as class_user {
  *id: INT PK
  --
  class_id: INT FK
  user_id: INT FK
  role: ENUM {teacher|student}
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "ClassTest" as class_test {
  *id: INT PK
  --
  class_id: INT FK
  test_id: INT FK
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "ClassMaterial" as class_material {
  *id: INT PK
  --
  class_id: INT FK
  title: VARCHAR(255)
  description: TEXT
  file_url: VARCHAR(255)
  type: VARCHAR(100)
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "Announcement" as announcement {
  *id: INT PK
  --
  title: VARCHAR(255)
  content: TEXT
  target_role: ENUM {all|student|teacher|admin}
  author_id: INT FK
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

entity "Feedback" as feedback {
  *id: INT PK
  --
  user_id: INT FK
  type: VARCHAR(100)
  subject: VARCHAR(255)
  message: TEXT
  status: ENUM {pending|replied|resolved}
  admin_reply: TEXT
  created_at: TIMESTAMP
  updated_at: TIMESTAMP
}

' Relationships

user ||--o{ question: creates
user ||--o{ test: creates
user ||--o{ test_attempt: takes
user ||--o{ question_progress: tracks
user ||--o{ class_user: enrolls_in
user ||--o{ announcement: writes
user ||--o{ feedback: submits

subject ||--o{ question: categorizes
subject ||--o{ test: uses

question ||--o{ test_question: included_in
question ||--o{ test_answer: answered_in
question ||--o{ question_progress: measures

test ||--o{ test_question: contains
test ||--o{ test_attempt: taken_by
test ||--o{ class_test: assigned_to

test_question }o--|| question: references

test_attempt ||--o{ test_answer: contains
test_attempt }o--|| user: submitted_by

test_answer }o--|| question: about

question_progress }o--|| user: for_user
question_progress }o--|| question: for_question

class_model ||--o{ class_user: has_members
class_model ||--o{ class_material: has_materials
class_model ||--o{ class_test: has_tests
class_model }o--|| user: created_by

class_user }o--|| user: member

class_test }o--|| test: references

class_material }o--|| class_model: in_class

announcement }o--|| user: author

feedback }o--|| user: from_user

@enduml
